micromobility_car_navigation/local/Project/dev_ws/log/build_2021-05-23_12-17-02/navigation/stderr.log
  File "/home/user/Projects/dev_ws/install/navigation/lib/python3.8/site-packages/navigation/navigation_handler.py", line 76
    if msg.data = True:
                ^
SyntaxError: invalid syntax

